--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@ const searchInput = document.getElementById('search');
 let moviesData = [];
 
 // Cargar JSON
-fetch('peliculas.json')
+fetch('Peliculas.json
+')
   .then(response => response.json())
   .then(data => {
     moviesData = data;
