--- a/index.html
+++ b/index.html
@@ -94,8 +94,7 @@ const searchInput = document.getElementById('search');
 let moviesData = [];
 
 // Cargar JSON
-fetch('Peliculas.json
-')
+fetch('Peliculas.json')
   .then(response => response.json())
   .then(data => {
     moviesData = data;
