--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>FILMBOX</title>
@@ -75,6 +76,49 @@
     border-radius: 4px;
     z-index: 10;
   }
+  /* 🔹 Ajuste del reproductor según orientación */
+@media (orientation: landscape) {
+  .header {
+    height: 100vh; /* ocupa toda la altura horizontal */
+  }
+
+  .header iframe {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+@media (orientation: portrait) {
+  .header {
+    height: 200px; /* tamaño original vertical */
+  }
+
+  .header iframe {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+/* 🔹 Contenido dinámico adaptativo */
+.content {
+  display: flex;
+  flex-wrap: wrap; /* se adapta si la pantalla es pequeña */
+  gap: 15px;
+}
+
+.poster img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
+
+.details {
+  flex: 1 1 auto; /* se adapta al espacio disponible */
+}
+
+.synopsis {
+  width: 100%;
+}
 </style>
 </head>
 <body>
