--- a/index.html
+++ b/index.html
@@ -127,6 +127,36 @@
   <div class="logo">FILMBOX</div>
   <input type="text" id="search" placeholder="Buscar...">
 </header>
+  <!-- 🔔 Aviso global debajo del logo/buscador -->
+<div class="marquee">
+  <span>⚡ Servidor actualizado | 🌐 FilmBox pronto en navegadores</span>
+</div>
+
+<style>
+  .marquee {
+    width: 100%;
+    overflow: hidden;
+    background: #e50914; /* rojo tipo Netflix */
+    color: #fff;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 8px 0;
+    white-space: nowrap;
+    margin-top: 10px; /* espacio respecto al buscador */
+    border-radius: 6px; /* opcional, para que se vea más elegante */
+  }
+
+  .marquee span {
+    display: inline-block;
+    padding-left: 100%;
+    animation: scroll 12s linear infinite;
+  }
+
+  @keyframes scroll {
+    0%   { transform: translateX(0); }
+    100% { transform: translateX(-100%); }
+  }
+</style>
 
 <section class="movies" id="movieList">
   <!-- Las películas se cargarán aquí desde el JSON -->
