--- a/index.html
+++ b/index.html
@@ -136,7 +136,63 @@
 </style>
 </head>
 <body>
+<!-- Loader -->
+<div id="loader" style="
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #000; /* Fondo negro */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column; /* Para que el texto quede debajo */
+  z-index: 9999;
+">
+  <!-- Logo más pequeño -->
+  <div style="
+    width: 60px;
+    height: 60px;
+    border: 4px solid #fff;
+    border-top: 4px solid #e50914; /* rojo Filmbox */
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+  "></div>
 
+  <!-- Texto minimalista debajo del loader -->
+  <div style="
+    color: #aaa;  /* gris */
+    margin-top: 8px;
+    font-family: Arial, sans-serif;
+    font-size: 12px; /* más pequeño */
+    letter-spacing: 0.5px;
+  ">
+    CARGANDO NUESTRO CONTENIDO
+  </div>
+</div>
+
+<style>
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+</style>
+
+<script>
+  window.addEventListener("load", function() {
+    const loader = document.getElementById("loader");
+
+    setTimeout(() => {
+      loader.style.transition = "opacity 1s ease";
+      loader.style.opacity = 0;
+
+      setTimeout(() => {
+        loader.style.display = "none";
+      }, 1000);
+    }, 4000); // 4 segundos
+  });
+</script>
 <header>
   <div class="logo">FILMBOX</div>
   <input type="text" id="search" placeholder="Buscar...">
