--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 </header>
   <!-- 🔔 Aviso global debajo del logo/buscador -->
 <div class="marquee">
-  <span>⚡ Servidor actualizado | 🌐 FilmBox pronto en navegadores</span>
+  <span>⚡  🌐 VISITA FILMBOX.LAT PARA RECIBIR ACTUALIZACIONES</span>
 </div>
 
 <style>
