--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  
+  <meta name="google-site-verification" content="MVta7fYIufFXDOm8V4xosjfixFWA8pgXkMYCqivCvJE" />
   <!-- Favicon básico -->
 <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
