--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 </header>
   <!-- 🔔 Aviso global debajo del logo/buscador -->
 <div class="marquee">
-  <span>⚡  🌐 VISITA FILMBOX.LAT PARA RECIBIR ACTUALIZACIONES</span>
+  <span>⚡  🌐 VISITA FILMBOX.LAT </span>
 </div>
 
 <style>
