--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>FILMBOX</title>
+  <meta name="description" content="Vive el cine sin límites en FILMBOX. Mira películas y series gratis en línea con los mejores estrenos, acción y suspenso.">
 <style>
   body {
     margin: 0;
