--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 </header>
   <!-- 🔔 Aviso global debajo del logo/buscador -->
 <div class="marquee">
-  <span>⚡  🌐 VISITA FILMBOX.LAT </span>
+  <span>⚡  ¡¡FELIZ NAVIDAD!!</span>
 </div>
 
 <style>
