--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 </header>
   <!-- 🔔 Aviso global debajo del logo/buscador -->
 <div class="marquee">
-  <span>⚡  ¡¡FELIZ NAVIDAD!!</span>
+  <span>MEJORANDO NUESTROS SERVICIOS</span>
 </div>
 
 <style>
